# UTFPR-Data-Science-CSB55

./: README.md  pyproject.toml  requirements.txt
02 - Analise exploratoria/: AnaliseExploratoria-GasEmissions.ipynb  clean-tweets.ipynb  iqar-analise-ar.ipynb  iqar-classificacao.ipynb
04 - Pesquisa/: AnaliseExploratoria-GasEmissions.ipynb  first-question-countries.ipynb  first-question.ipynb  pergunta2-pesquisa.ipynb
06 - LDA/: LDA_GlobalWarming.ipynb
data/: gdp-per-capita.csv  human-development-index.csv
data/GDP/: GDP_Continents.csv  GDP_Countries.csv
data/Gas Emissions/: total-ghg-emissions.csv
data/air-quality/: airquality-covid19-cities.json  classification-iqar.csv
data/air-quality/results/: iqar-continents-class-after.csv  iqar-continents.csv  iqar-countries-class-after.csv  iqar-countries-co.csv  iqar-countries-no2.csv  iqar-countries-o3.csv  iqar-countries-pm10.csv  iqar-countries-pm25.csv  iqar-countries-so2.csv  iqar-countries.csv
scripts/: iqar-download.sh
